# RasterShop

./: .gitignore  CMakeLists.txt  Doxyfile  settings.txt
doc/html/: _application_settings_8h_source.html  _canvas_8h_source.html  _canvas_area_8h_source.html  _globals_8h_source.html  _graphics_rectangle_8h_source.html  _graphics_scene_8h_source.html  _image_layer_8h_source.html  _layer_preview_8h_source.html  _main_window_8h_source.html  _new_canvas_dialog_8h_source.html  _tool_bar_8h_source.html  _tool_bar_button_8h_source.html  _work_space_8h_source.html  annotated.html  class_application_settings-members.html  class_application_settings.html  class_application_settings_1_1_constructor_enabler-members.html  class_application_settings_1_1_constructor_enabler.html  class_canvas-members.html  class_canvas.html  class_canvas_area-members.html  class_canvas_area.html  class_graphics_rectangle-members.html  class_graphics_rectangle.html  class_graphics_scene-members.html  class_graphics_scene.html  class_image_layer-members.html  class_image_layer.html  class_layer_preview-members.html  class_layer_preview.html  class_main_window-members.html  class_main_window.html  class_new_canvas_dialog-members.html  class_new_canvas_dialog.html  class_tool_bar-members.html  class_tool_bar.html  class_tool_bar_button-members.html  class_tool_bar_button.html  class_work_space-members.html  class_work_space.html  (+5 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  searchdata.js
doc/latex/: annotated.tex  class_application_settings.eps  class_application_settings.tex  class_application_settings_1_1_constructor_enabler.eps  class_application_settings_1_1_constructor_enabler.tex  class_canvas.eps  class_canvas.tex  class_canvas_area.eps  class_canvas_area.tex  class_graphics_rectangle.eps  class_graphics_rectangle.tex  class_graphics_scene.eps  class_graphics_scene.tex  class_image_layer.eps  class_image_layer.tex  class_layer_preview.eps  class_layer_preview.tex  class_main_window.tex  class_new_canvas_dialog.eps  class_new_canvas_dialog.tex  class_tool_bar.eps  class_tool_bar.tex  class_tool_bar_button.eps  class_tool_bar_button.tex  class_work_space.tex  hierarchy.tex  refman.tex
src/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasArea.cpp  CanvasArea.h  ChangeCanvasSizeDialog.cpp  ChangeCanvasSizeDialog.h  ColorPicker.cpp  ColorPicker.h  GaussianBlur.cpp  GaussianBlur.h  Globals.h  GraphicsRectangle.cpp  GraphicsRectangle.h  GraphicsScene.cpp  GraphicsScene.h  ImageLayer.cpp  ImageLayer.h  LayerPreview.cpp  LayerPreview.h  LayersView.cpp  LayersView.h  MainWindow.cpp  MainWindow.h  MainWindowX.cpp  MainWindowX.h  MainWindowX.ui  MyCanvas.cpp  MyCanvas.h  NewCanvasDialog.cpp  NewCanvasDialog.h  NewLayerDialog.cpp  NewLayerDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  PolygonTool.cpp  PolygonTool.h  QSFMLCanvas.cpp  (+29 more)
src/LayerSystem/: Controller.cpp  Controller.h  LayerSystem.cpp  LayerSystem.h  LayerSystemMain.cpp  LayerSystemMain.h  Model.cpp  Model.h  View.cpp  View.h
src/uis/: ChangeCanvasSizeDialog.ui  ColorPicker.ui  LayerPreview.ui  LayersView.ui  MainWindowX.ui  NewCanvasDialog.ui  NewLayerDialog.ui  NewProjectDialog.ui  TextEditOptions.ui  ToolBar.ui  ToolBar1.ui
tests/: CMakeLists.txt  example.cpp
